# Android-App

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  AMNEZIA_WIREGUARD_IMPLEMENTATION.md  AUTO_SECURE_WHITELIST.md  CLAUDE.md  HASHED_LOGIN_IMPLEMENTATION.md  README.md  RELEASE_TASKS.md  SKILL.md  TIER2_TESTING_TODO.md  Windcribe  build.gradle  build.gradle.kts  depedencycheck.gradle  dependency-suppression.xml  extract-symbols.sh  gradle.properties  hide_release_block.patch  ktlint.gradle  settings.gradle  settings.gradle.kts  strongswan-src  translate
.claude/: README.md  openvpn-update-and-patch-guide.md  settings.local.json  wg-psk-rotation-diagram.md
.claude/commands/: healthcheck.md  translate.md
base/: build.gradle  build.gradle.kts
baselineprofile/: build.gradle.kts
ci/: android-deploy.Dockerfile  strongswan-build.Dockerfile
common/: build.gradle.kts
config/: build.properties  cacert.pem  config.gradle
dga/: build.gradle
dga/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fastlane/: Appfile  Fastfile  Pluginfile  README.md  report.xml
gradle/: libs.versions.toml
maestro/: .env.example  README.md  config.yaml  run.sh
mobile/: build.gradle  build.gradle.kts  proguard-rules.pro
openvpn/: .gitmodules  build.gradle.kts  prepareovpn3.sh
stealth/: build.gradle
strongswan/: build.gradle  build.gradle.kts
test/: build.gradle
tools/: build_strongswan.sh  build_wsnet.sh  build_wstunnel.sh  monitor_performance.sh  sign_apk.sh  translate-tool.py
tv/: build.gradle  build.gradle.kts  lint.xml  proguard-rules.pro
wgtunnel/: build.gradle.kts
ws/: .gitignore  LICENSE  README.md  go.mod  go.sum
wstunnel/: build.gradle.kts
wstunnel/src/main/cpp/: CMakeLists.txt
(+2558 files in other folders)
